--- a/index.html
+++ b/index.html
@@ -6,8 +6,7 @@
       name="viewport"
       content="width=device-width, initial-scale=1.0, user-scalable=yes"
     />
-    <title id="page-title">생활 습관으로 보는 당신의 성격은?</title>
-    <!-- 반응형 웹을 손쉽게 구현하기 위해 "bootstrap" 사용 -->
+    <title id="page-title"></title>
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
       rel="stylesheet"
@@ -24,7 +23,7 @@
   <body>
     <div class="container">
       <section id="main-page" class="mx-auto my-5 py-5 px-3">
-        <h1 id="main-title">생활 습관으로 보는 당신의 성격은?</h1>
+        <h1 id="main-title"></h1>
         <div class="col-lg-6 col-md-8 col-sm-10 col-12 mx-auto">
           <img
             src="assets\images\main-img-lifestyle.jpg"
@@ -32,15 +31,8 @@
             class="img-fluid"
           />
         </div>
-        <p id="main-description">
-          생활 습관으로 보는 성격 유형 테스트에 오신 것을 환영합니다!<br />
-          매일 매일 반복되는 행동을 통해 성격을 파악해보세요!<br />
-          여러분의 생활 습관을 이해하는 데 도움이 될 것입니다.<br />
-          "시작하기" 버튼을 클릭하여 테스트를 시작하세요.
-        </p>
-        <button id="start-button" type="button" class="btn nt-3">
-          시작하기
-        </button>
+        <p id="main-description"></p>
+        <button id="start-button" type="button" class="btn nt-3"></button>
         <div id="language-selector">
           <a href="#" id="lang-switch">
             <img
@@ -60,8 +52,8 @@
         <form id="lifestyle-test-form">
           <div id="question-container"></div>
           <div id="qna-btn">
-            <button type="button" id="prev-button">이전</button>
-            <button type="button" id="next-button">다음</button>
+            <button type="button" id="prev-button"></button>
+            <button type="button" id="next-button"></button>
           </div>
         </form>
       </section>
@@ -69,8 +61,8 @@
       <section id="result-page" class="mx-auto my-5 py-5 px-3">
         <div id="result"></div>
         <div id="result-btn">
-          <button type="button" id="restart-button">다시 시작하기</button>
-          <button type="button" class="kakao">공유하기</button>
+          <button type="button" id="restart-button"></button>
+          <button type="button" class="kakao" style="display: none"></button>
         </div>
       </section>
 
